--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "wifi-party-rust"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-prost = "0.11.9"
-safe-transmute = "0.11.2"
-
 [build-dependencies]
 prost-build = "0.11.9"
+
+[dependencies]
+zerocopy = "0.6.1"
